--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 </div>
 
 <script>
-fetch('https://layer.bicyclesharing.net/map/v1/nyc/stations', { no-cors: true });
+fetch('https://layer.bicyclesharing.net/map/v1/nyc/stations');
+fetch('https://layer.bicyclesharing.net/map/v1/nyc/stations').then(console.log);
 </script>
