--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 </div>
 
 <script>
-fetch('https://layer.bicyclesharing.net/map/v1/nyc/stations');
-fetch('https://layer.bicyclesharing.net/map/v1/nyc/stations').then(console.log);
+fetch('https://layer.bicyclesharing.net/map/v1/nyc/stations').then(({ body }) => {
+  const stationReader = body.getReader();
+  stationReader.read().then(({ value, done }) => {
+    console.log(value);
+    console.log(done);
+  });
+});
 </script>
