--- a/index.html
+++ b/index.html
@@ -26,4 +26,8 @@ fetch('https://layer.bicyclesharing.net/map/v1/nyc/stations').then(({ body }) =>
     console.log(window.binArray);
   }
 });
+console.log('\n\n\n');
+fetch('https://layer.bicyclesharing.net/map/v1/nyc/stations').then(({ json }) => {
+  console.log(json());
+};
 </script>
