--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@ fetch('https://layer.bicyclesharing.net/map/v1/nyc/stations').then(({ body }) =>
 });
 */
 console.log('\n\n\n');
-fetch('https://layer.bicyclesharing.net/map/v1/nyc/stations').then(({ json }) => {
-  console.log(json());
+fetch('https://layer.bicyclesharing.net/map/v1/nyc/stations').then(res => {
+  window.res = res;
+  console.log(res);
 });
 </script>
