--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ const bestStations = {
   return3: {},
 };
 
-console.log('distance is: ', distance(workLat, workLong, homeLat, homeLong));
+console.log('distance is: ', calcDistance(workLat, workLong, homeLat, homeLong));
 fetch('https://layer.bicyclesharing.net/map/v1/nyc/stations').then(res => {
   window.res = res;
   console.log(res);
