--- a/index.html
+++ b/index.html
@@ -97,14 +97,6 @@ const homeLat = 40.708504;
 const homeLong = -74.0186077;
 
 const bestStations = {
-  take0: {},
-  take1: {},
-  take2: {},
-  take3: {},
-  return0: {},
-  return1: {},
-  return2: {},
-  return3: {},
 };
 
 console.log('distance is: ', calcDistance(workLat, workLong, homeLat, homeLong));
@@ -121,9 +113,7 @@ fetch('https://layer.bicyclesharing.net/map/v1/nyc/stations').then(res => {
       const [stationLong, stationLat] = geometry.coordinates;
       const distance = calcDistance(stationLat, stationLong, homeLat, homeLong);
       const key = `return${station.bike_angels_points}`;
-      console.log(bestStations[key]);
-      console.log(bestStations, key);
-      const { distance: comparisonDistance } = bestStations[key];
+      const { distance: comparisonDistance } = bestStations[key] || {};
       if (distance < comparisonDistance) {
         bestStations[key] = {
           distance,
@@ -136,7 +126,7 @@ fetch('https://layer.bicyclesharing.net/map/v1/nyc/stations').then(res => {
       const [stationLong, stationLat] = geometry.coordinates;
       const distance = calcDistance(stationLat, stationLong, workLat, workLong);
       const key = `return${station.bike_angels_points}`;
-      const { distance: comparisonDistance } = bestStations[key];
+      const { distance: comparisonDistance } = bestStations[key] || {};
       if (distance < comparisonDistance) {
         bestStations[key] = {
           distance,
