--- a/index.html
+++ b/index.html
@@ -74,43 +74,45 @@ fetch('https://layer.bicyclesharing.net/map/v1/nyc/stations').then(res => {
 
   const urlTextArea = document.createElement('textarea');
   urlTextArea.placeholder = 'Provide google maps url';
-  urlTextArea.onpaste = ({ target: { value } }) => {
-    console.log(value);
-    const [startLongitude, stopLongitude] = value.match(/1d-[^!]*!/g);
-    const [startLatitude, stopLatitude] = value.match(/!2d-[^!]*!/g);
-    console.log(startLongitude, stopLongitude);
-    console.log(startLatitude, stopLatitude);
+  urlTextArea.onkeypress = ({ keyCode, target: { value } }) => {
+    if (keyCode === 13) {
+      console.log(value);
+      const [startLongitude, stopLongitude] = value.match(/1d-[^!]*!/g);
+      const [startLatitude, stopLatitude] = value.match(/!2d-[^!]*!/g);
+      console.log(startLongitude, stopLongitude);
+      console.log(startLatitude, stopLatitude);
 
-    resJson.features.forEach(({ geometry, properties: station }) => {
-      if (station.bike_angels_action === 'give') {
-        const [stationLong, stationLat] = geometry.coordinates;
-        const distance = calcDistance(stationLat, stationLong, stopLatitude, stopLongitude);
-        const key = `return${station.bike_angels_points}`;
-        const { distance: comparisonDistance } = bestStations[key] || {};
-        if (!(comparisonDistance < distance)) {
-          bestStations[key] = {
-            distance,
-            name: station.name,
+      resJson.features.forEach(({ geometry, properties: station }) => {
+        if (station.bike_angels_action === 'give') {
+          const [stationLong, stationLat] = geometry.coordinates;
+          const distance = calcDistance(stationLat, stationLong, stopLatitude, stopLongitude);
+          const key = `return${station.bike_angels_points}`;
+          const { distance: comparisonDistance } = bestStations[key] || {};
+          if (!(comparisonDistance < distance)) {
+            bestStations[key] = {
+              distance,
+              name: station.name,
+            }
           }
         }
-      }
 
-      if (station.bike_angels_action === 'take') {
-        const [stationLong, stationLat] = geometry.coordinates;
-        const distance = calcDistance(stationLat, stationLong, startLatitude, startLongitude);
-        const key = `take${station.bike_angels_points}`;
-        const { distance: comparisonDistance } = bestStations[key] || {};
-        if (!(comparisonDistance < distance)) {
-          bestStations[key] = {
-            distance,
-            name: station.name,
+        if (station.bike_angels_action === 'take') {
+          const [stationLong, stationLat] = geometry.coordinates;
+          const distance = calcDistance(stationLat, stationLong, startLatitude, startLongitude);
+          const key = `take${station.bike_angels_points}`;
+          const { distance: comparisonDistance } = bestStations[key] || {};
+          if (!(comparisonDistance < distance)) {
+            bestStations[key] = {
+              distance,
+              name: station.name,
+            }
           }
         }
-      }
-    });
+      });
 
-    console.log(bestStations);
+      console.log(bestStations);
 
+    }
   }
 
   document.body.appendChild(urlTextArea);
